--- a/app/views/tracks/google_maps.html.haml
+++ b/app/views/tracks/google_maps.html.haml
@@ -1,3 +1,5 @@
+- provide :title, "#{t 'tracks.show.title_track' } ##{@track.id} | #{@track.name}"
+
 %script{:type => 'text/javascript',
         :src  => '//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry'}
 
