добавлен раздел с поддерживаемыми приборами.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -152,3 +152,36 @@
 
   margin-top: 15px;
 }
+
+@sf-background-color: lightgray;
+@sf-height: 150px;
+
+#gpx-sf {
+  background: asset-url('gpx.png') no-repeat center center;
+  background-size: auto @sf-height;
+  height: @sf-height;
+}
+
+#fs-sf {
+  background: asset-url('flysight.jpg') no-repeat center center;
+  background-size: auto @sf-height;
+  height: @sf-height;
+}
+
+#garmin-sf {
+  background: asset-url('garmin-foretrex.jpg') no-repeat center center;
+  background-size: auto @sf-height;
+  height: @sf-height;
+}
+
+#wintec-sf {
+  background: asset-url('wintec.jpg') no-repeat center center;
+  background-size: auto @sf-height;
+  height: @sf-height;
+}
+
+#columbus-sf {
+  background: asset-url('columbus-v900.png') no-repeat center center;
+  background-size: auto @sf-height;
+  height: @sf-height;
+}
