--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -17,6 +17,9 @@
         %img.img-responsive{:src => asset_path('app-logo.png')}
 
 .container.top-buffer
+  .row
+    .col-sm-12
+      %h2= 'Как с этим работать:'
   .row.how-it-works
     .col-lg-4.col-md-4.col-sm-4
       #first-step-hiw
@@ -33,20 +36,25 @@
 
 
 .container.top-buffer
-  .row.supported-formats
-    .col-lg-3.col-md-3.col-sm-3
-      #gpx-sf
-    .col-lg-3.col-md-3.col-sm-3
-      #fs-sf
-    .col-lg-3.col-md-3.col-sm-3
-      #garmin-sf
-    .col-lg-3.col-md-3.col-sm-3
-      #wintec-sf
-
-.container.top-buffer
   .row
-    .col-6.col-sm-6.col-lg-4
-      %h2= 'Menzelinsk Sky Race'
-      %p= '6-8 сентября на аэродроме Мензелинск прошли соревнования в дисциплинах Время, Дальность, Скорость. В соревнованиях приняли участие спортсмены из 11 городов.'
-      %p
-        %a{:href => event_path( :id => 2 )}= t('static_pages.index.goto_event')
+    .col-sm-12
+      %h2= 'Поддерживаемые форматы и приборы:'
+  .row.supported-formats
+    .col-lg-2.col-md-2.col-sm-3.top-buffer
+      #gpx-sf
+    .col-lg-2.col-md-2.col-sm-3.top-buffer
+      #fs-sf
+    .col-lg-2.col-md-2.col-sm-3.top-buffer
+      #garmin-sf
+    .col-lg-2.col-md-2.col-sm-3.top-buffer
+      #wintec-sf
+    .col-lg-2.col-md-2.col-sm-3.top-buffer
+      #columbus-sf
+
+-#.container.top-buffer
+-#  .row
+-#    .col-6.col-sm-6.col-lg-4
+-#      %h2= 'Menzelinsk Sky Race'
+-#      %p= '6-8 сентября на аэродроме Мензелинск прошли соревнования в дисциплинах Время, Дальность, Скорость. В соревнованиях приняли участие спортсмены из 11 городов.'
+-#      %p
+-#        %a{:href => event_path( :id => 2 )}= t('static_pages.index.goto_event')
