--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,6 +44,7 @@
   border-top-color: @navbar-default-border;
   border-top-style: solid;
   border-top-width: 1px;
+  margin-top: 20px;
 }
 
 .navbar {
@@ -158,7 +159,7 @@
 
 #gpx-sf {
   background: asset-url('gpx.png') no-repeat center center;
-  background-size: auto @sf-height;
+  background-size: auto 120px;
   height: @sf-height;
 }
 
