--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -24,31 +24,31 @@
     .col-lg-4.col-md-4.col-sm-4
       #first-step-hiw
       .step-number-hiw= '1'
-      %p= 'Возьмите GPS и совершите полет'
+      %p= 'Летайте с GPS логгером'
     .col-lg-4.col-md-4.col-sm-4
       #second-step-hiw
       .step-number-hiw= '2'
-      %p= 'Загрузите и выберите диапазон свободного падения'
+      %p= 'Загружайте треки'
     .col-lg-4.col-md-4.col-sm-4
       #third-step-hiw
       .step-number-hiw= '3'
-      %p= 'Анализируйте, делайте выводы, летайте лучше'
+      %p= 'Анализируйте, летайте лучше'
 
-
+%hr
 .container.top-buffer
   .row
     .col-sm-12
       %h2= 'Поддерживаемые форматы и приборы:'
   .row.supported-formats
-    .col-lg-2.col-md-2.col-sm-3.top-buffer
+    .col-lg-2.col-md-3.col-sm-3.col-xs-6.top-buffer
       #gpx-sf
-    .col-lg-2.col-md-2.col-sm-3.top-buffer
+    .col-lg-2.col-md-3.col-sm-3.col-xs-6.top-buffer
       #fs-sf
-    .col-lg-2.col-md-2.col-sm-3.top-buffer
+    .col-lg-2.col-md-3.col-sm-3.col-xs-6.top-buffer
       #garmin-sf
-    .col-lg-2.col-md-2.col-sm-3.top-buffer
+    .col-lg-2.col-md-3.col-sm-3.col-xs-6.top-buffer
       #wintec-sf
-    .col-lg-2.col-md-2.col-sm-3.top-buffer
+    .col-lg-2.col-md-3.col-sm-3.col-xs-6.top-buffer
       #columbus-sf
 
 -#.container.top-buffer
