About перенес из хедера в футер, исправил размер футера для врапера.

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,9 +12,13 @@
       .col-sm-4
         %p
           %a{:href => 'https://www.facebook.com/skyderby.ru'}
-            %i.fa.fa-facebook-square
+            %i.fa.fa-fw.fa-info
+            = t('application.header.about')
+          %br
+          %a{:href => 'https://www.facebook.com/skyderby.ru'}
+            %i.fa.fa-fw.fa-facebook-square
             = t('application.footer.fb_page')
           %br
           %a{:href => 'mailto:ab@ipkunin.ru'}
-            %i.fa.fa-mail-forward
+            %i.fa.fa-fw.fa-mail-forward
             = 'ab@ipkunin.ru'
