Показывать комментарий, только если он введен.

--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -816,6 +816,7 @@
   #single-chart
     #all_data_chart
 
-  %blockquote
-    %small= @track.comment
+  - if @track.comment.present?
+    %blockquote
+      %small= @track.comment
 
