--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,6 +3,9 @@
 
 <div class="container top-buffer">
 
+  <h3><%= t('static_pages.about.developer')%></h3>
+  <h3><%= t('static_pages.about.de_translate')%></h3>
+  <br>
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne">
@@ -34,71 +37,72 @@
     def process_track_points track_points
 
       # Пока не придумал что делать с 5 Гц и 10 Гц файлами - оставляю только первую запись по дате создания
-      track_points.uniq!{ |x| DateTime.strptime(x['point_created_at'], '%Y-%m-%dT%H:%M:%S') }
+      track_points.uniq!{ |x| DateTime.strptime(x[:point_created_at], '%Y-%m-%dT%H:%M:%S') }
 
-      min_h = track_points.min_by{ |x| x['elevation'] }['elevation'];
-      max_h = track_points.max_by{ |x| x['elevation'] }['elevation'];
-
-      # Обрежем все точки выше минимума (предполагаю Земли) на 50 метров
-      tmp_points = []
-      track_points.each do |x|
-        tmp_points << x
-        if x['elevation'] <= (min_h + 50)
-          break
-        end
-      end
-      
-      # Развернем массив и обрежем все точки после достижения максимальной высоты
-      track_points = []
-      tmp_points.reverse!
-      tmp_points.each do |x|
-        track_points << x
-        if x['elevation'] >= max_h -15
-          break
-        end
-      end
-      track_points.reverse!
-
+      min_h = track_points.min_by{ |x| x[:elevation] }[:elevation]
       # Уменьшим высоту во всех точках на минимальную. (корректировка относительно уровня земли)
       track_points.each do |x|
-        x['elevation'] -= min_h
+        x[:elevation] -= min_h
       end
+
+      min_h = track_points.min_by{ |x| x[:elevation] }[:elevation]
+      max_h = track_points.max_by{ |x| x[:elevation] }[:elevation]
+
       # Расчет дистанции и времени полета
       fl_time = 0
 
       track_points.each_index do |i|
         point = track_points[i]
-        point['fl_time'] = fl_time
-        point['distance'] = 0 if i == 0
+        point[:distance] = 0 if i == 0
         if i > 0
           prev_point = track_points.at(i-1)
-          point['distance'] = calc_distance [prev_point['latitude'], prev_point['longitude']], [point['latitude'], point['longitude']] 
-          point['h_speed'] = point['distance'] * 3.6
-          point['v_speed'] = (prev_point['elevation'] - point['elevation']) * 3.6
+
+          datetime_1 = DateTime.strptime(point[:point_created_at], '%Y-%m-%dT%H:%M:%S')
+          datetime_2 = DateTime.strptime(prev_point[:point_created_at], '%Y-%m-%dT%H:%M:%S')
+          fl_time_diff = (datetime_1 - datetime_2) * 1.days
+          fl_time += fl_time_diff
+
+          point[:distance] = calc_distance [prev_point[:latitude], prev_point[:longitude]], [point[:latitude], point[:longitude]]
+          point[:h_speed] = point[:distance] / fl_time_diff * 3.6
+          point[:v_speed] = (prev_point[:elevation] - point[:elevation]) / fl_time_diff * 3.6
         end
-        fl_time += 1
+        point[:fl_time] = fl_time
       end
 
       # Медианный фильтр для расстояния и высоты
       track_points.each_index do |i|
-        
+
         point = track_points[i]
-        
+
         median_start = [0, i-1].max
         median_end  = [track_points.count-1, i+1].min
-        
+
         median_points = [track_points[median_start], point, track_points[median_end]]
-        point['distance']  = median_points.map { |x| x['distance'] }.sort[1]
-        point['elevation'] = median_points.map { |x| x['elevation'] }.sort[1]
-        point['h_speed']   = median_points.map { |x| x['h_speed'] || 0 }.sort[1]
-        point['v_speed']   = median_points.map { |x| x['v_speed'] || 0 }.sort[1]
-        
+        point[:distance]  = median_points.map { |x| x[:distance] }.sort[1]
+        point[:elevation] = median_points.map { |x| x[:elevation] }.sort[1]
+        point[:h_speed]   = median_points.map { |x| x[:h_speed] || 0 }.sort[1]
+        point[:v_speed]   = median_points.map { |x| x[:v_speed] || 0 }.sort[1]
+
       end
 
-      # Обрежем все точки до первой, где вертикальная скорость превысила 20 км/ч
-      track_points = track_points.drop_while { |x| x['v_speed'] < 25 }
+      self.ff_start = 0
+      self.ff_end = fl_time
 
-      return track_points
+      # Развернем массив и найдем точку после достижения максимальной высоты и набору скорости в 25 км/ч
+      track_points.reverse!
+      start_point = track_points.detect { |x| x[:elevation] >= (max_h - 15) }
+      self.ff_start = start_point[:fl_time] if start_point.present?
+
+      track_points.reverse!
+      start_point = track_points.detect { |x| (x[:fl_time] > self.ff_start && x[:v_speed] > 25) }
+      self.ff_start = start_point[:fl_time] if start_point.present?
+
+      # Найдем первую точку ниже минимума (предполагаю Земли) + 50 метров
+      end_point = track_points.detect { |x| x[:elevation] < (min_h + 50) }
+      self.ff_end = end_point[:fl_time] if end_point.present?
+
+      track_points
+
     end
          </pre>
         </div>
