--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,18 +1,18 @@
-<h2>Change your password</h2>
+<h2><%= t('devise.passwords.edit.change_your_password')%></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
-    <%= f.label :password, 'New password', class: 'col-sm-2 control-label' %>
+    <%= f.label :password, t('devise.passwords.edit.new_password'), class: 'col-sm-2 control-label' %>
     <div class="col-sm-6">
       <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, 'Confirm new password', class: 'col-sm-2 control-label' %>
+    <%= f.label :password_confirmation, t('devise.passwords.edit.confirm_new_password'), class: 'col-sm-2 control-label' %>
     <div class="col-sm-6">
       <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
     </div>
@@ -20,7 +20,7 @@
 
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit 'Change my password', class: 'btn btn-primary' %>
+      <%= f.submit t('devise.passwords.edit.change_my_password'), class: 'btn btn-primary' %>
     </div>
   </div>
 
