--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Forgot your password?</h2>
+<h2><%= t('devise.passwords.new.forgot_your_password')%></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
@@ -12,7 +12,7 @@
 
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit 'Send me reset password instructions', class: 'btn btn-primary' %>
+      <%= f.submit t('devise.passwords.new.send_me_reset_password_instructions'), class: 'btn btn-primary' %>
     </div>
   </div>
   <div class="form-group">
