--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h2><%= t 'devise.registrations.new.sign_up' %></h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
     <%= devise_error_messages! %>
 
@@ -26,13 +26,13 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-6">
-        <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+        <%= f.submit t('devise.registrations.new.sign_up'), class: 'btn btn-primary' %>
       </div>
     </div>
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-6">
-        <%= render 'devise/shared/links' %>
+        <%= render 'users/shared/links' %>
       </div>
     </div>
   <% end %>
