Перевод devise, адаптация вьюшек

--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -9,4 +9,4 @@
   <div><%= f.submit t('devise.confirmations.new.resend_confirmation_instructions') %></div>
 <% end %>
 
-<%= render 'devise/shared/links' %>
+<%= render 'users/shared/links' %>
