--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -9,4 +9,4 @@
   <div><%= f.submit 'Resend unlock instructions' %></div>
 <% end %>
 
-<%= render 'devise/shared/links' %>
+<%= render 'users/shared/links' %>
