--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,23 +1,25 @@
-<h2><%= t('devise.passwords.new.forgot_your_password')%></h2>
+<div class="container">
+  <h2><%= t('devise.passwords.new.forgot_your_password')%></h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-6">
-      <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+    <div class="form-group">
+      <%= f.label :email, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-6">
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit t('devise.passwords.new.send_me_reset_password_instructions'), class: 'btn btn-primary' %>
+    <div class="form-group">
+      <div class="col-sm-6 col-sm-offset-2">
+        <%= f.submit t('devise.passwords.new.send_me_reset_password_instructions'), class: 'btn btn-primary' %>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-6 col-sm-offset-2">
-      <%= render 'users/shared/links' %>
+    <div class="form-group">
+      <div class="col-sm-6 col-sm-offset-2">
+        <%= render 'users/shared/links' %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
