--- a/app/views/events/_competitors_table.html.haml
+++ b/app/views/events/_competitors_table.html.haml
@@ -3,7 +3,7 @@
     %tr
       %th= '№'
       %th= t('events.show.class_comp')
-      %th= t('tracks.index.suit')
+      %th= t('activerecord.attributes.track.suit')
   %tbody
   - @event.competitors_table.each do |val|
     %tr
