--- a/app/views/events/_orgs_table.html.haml
+++ b/app/views/events/_orgs_table.html.haml
@@ -19,7 +19,7 @@
       %td.text-info= t.tracks_admin
       %td.text-info
 
-%button.btn.btn-default{:data => {:toggle => "modal", :target => "#newEventOrgModal"}}
+%button.btn.btn-default{:data => {:toggle => 'modal', :target => '#newEventOrgModal'}}
   = 'Добавить организатора'
 
 %hr
