--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -45,24 +45,24 @@
             - if @user.user_profile
               %p
                 %strong
-                  = 'Прыжков всего / за 12 мес. / за 3 мес.:'
+                  = t('users.profile.show.jumps')
                 #{@user.user_profile.jumps_total} /
                 #{@user.user_profile.jumps_last_year} /
                 #{@user.user_profile.jumps_last_3m}
               %p
                 %strong
-                  = 'из них в вингсьюте / за 12 мес. / за 3 мес.:'
+                  = t('users.profile.show.ws_jumps')
                 #{@user.user_profile.jumps_wingsuit} /
                 #{@user.user_profile.jumps_wingsuit_last_year} /
                 #{@user.user_profile.jumps_wingsuit_last_3m}
               %p
-                %strong= 'Домашняя ДЗ:'
+                %strong= t('users.profile.show.home_dz')
                 =@user.user_profile.homeDZ_name
               %p
-                %strong= 'Профиль Facebook:'
+                %strong= t('users.profile.show.fb')
                 #{@user.user_profile.facebook_profile}
               %p
-                %strong= 'Профиль ВКонтакте:'
+                %strong= t('users.profile.show.vk')
                 #{@user.user_profile.vk_profile}
 
             - if @user == current_user
@@ -70,15 +70,15 @@
                 = 'Информация видна только Вам:'
               %p
                 %strong
-                  = 'Рост:'
+                  = t('users.profile.show.height')
                 = @user.user_profile.height
               %p
                 %strong
-                  = 'Вес:'
+                  = t('users.profile.show.weight')
                 = @user.user_profile.weight
               %p
                 %strong
-                  = 'Размер футболки:'
+                  = t('users.profile.show.shirt_size')
                 = @user.user_profile.shirt_size
 
           .tab-pane#tracks
@@ -86,11 +86,11 @@
             %table.table.table-hover
               %thead
                 %tr
-                  %th= '#'
-                  %th= 'Вингсьют'
-                  %th= 'Локация'
-                  %th= 'Комментарий'
-                  %th= 'Дата загрузки'
+                  %th= t('activerecord.attributes.track.id')
+                  %th= t('activerecord.attributes.track.suit')
+                  %th= t('activerecord.attributes.track.place')
+                  %th= t('activerecord.attributes.track.comment')
+                  %th= t('activerecord.attributes.track.uploaded_at')
               %tbody
                 - @user.tracks.each do |track|
                   %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
@@ -101,7 +101,7 @@
                     %td.text-info= track.created_at
 
           .tab-pane#competitions
-            %h2= 'Участие в соревнованиях:'
+            %h2= t('users.profile.show.events')
             - @user.competitors.each do |comp|
               =link_to comp.event.name, event_path(:id => comp.event.id)
               %br
