--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,6 +1,6 @@
 .container.top-buffer
   %h2
-    = 'Редактирование профиля'
+    = t('users.profile.edit.title')
     - if @user.user_profile
       = @user.user_profile.name
     - else
@@ -8,77 +8,77 @@
 
   = form_for [@user, @user.user_profile], :html => {:class => 'form-horizontal'} do |f|
     .form-group
-      = f.label 'Фамилия:', class: 'col-sm-2 control-label', :for => :last_name
+      = f.label t('activerecord.attributes.user_profile.last_name'), class: 'col-sm-2 control-label', :for => :last_name
       .col-sm-10
         .form-inline
           = f.text_field :last_name, autofocus: true, class: 'form-control'
-          = f.label 'Имя:', class: 'control-label', :for => :first_name
+          = f.label t('activerecord.attributes.user_profile.first_name'), class: 'control-label', :for => :first_name
           = f.text_field :first_name, class: 'form-control'
 
     .form-group
-      = f.label 'Фото', class: 'col-sm-2 control-label', :for => :userpic
+      = f.label t('activerecord.attributes.user_profile.photo'), class: 'col-sm-2 control-label', :for => :userpic
       .col-sm-4
         = f.file_field :userpic
 
     .form-group
-      = f.label 'Номер телефона', class: 'col-sm-2 control-label', :for => :phone_number
+      = f.label t('activerecord.attributes.user_profile.phone_number'), class: 'col-sm-2 control-label', :for => :phone_number
       .col-sm-4
         = f.text_field :phone_number, class: 'form-control'
 
     .form-group
-      = f.label 'Профиль Facebook', class: 'col-sm-2 control-label', :for => :facebook_profile
+      = f.label t('activerecord.attributes.user_profile.facebook_profile'), class: 'col-sm-2 control-label', :for => :facebook_profile
       .col-sm-4
         = f.text_field :facebook_profile, class: 'form-control'
 
     .form-group
-      = f.label 'Профиль ВКонтакте', class: 'col-sm-2 control-label', :for => :vk_profile
+      = f.label t('activerecord.attributes.user_profile.vk_profile'), class: 'col-sm-2 control-label', :for => :vk_profile
       .col-sm-4
         = f.text_field :vk_profile, class: 'form-control'
 
     .form-group
-      = f.label 'Прыжков всего:', class: 'col-sm-2 control-label', :for => :jumps_total
+      = f.label t('activerecord.attributes.user_profile.jumps_total'), class: 'col-sm-2 control-label', :for => :jumps_total
       .col-sm-10
         .form-inline
           = f.number_field :jumps_total, class: 'form-control'
-          = f.label '12 мес.', class: 'control-label', :for => :jumps_last_year
+          = f.label t('activerecord.attributes.user_profile.jumps_last_year'), class: 'control-label', :for => :jumps_last_year
           = f.number_field :jumps_last_year, class: 'form-control'
-          = f.label '3 мес.', class: 'control-label', :for => :jumps_last_3m
+          = f.label t('activerecord.attributes.user_profile.jumps_last_3m'), class: 'control-label', :for => :jumps_last_3m
           = f.number_field :jumps_last_3m, class: 'form-control'
 
     .form-group
-      = f.label 'Прыжков в вингсьюте:', class: 'col-sm-2 control-label', :for => :jumps_wingsuit
+      = f.label t('activerecord.attributes.user_profile.wingsuit_jumps_total'), class: 'col-sm-2 control-label', :for => :jumps_wingsuit
       .col-sm-10
         .form-inline
           = f.number_field :jumps_wingsuit, class: 'form-control'
-          = f.label '12 мес.', class: 'control-label', :for => :jumps_wingsuit_last_year
+          = f.label t('activerecord.attributes.user_profile.wingsuit_jumps_last_year'), class: 'control-label', :for => :jumps_wingsuit_last_year
           = f.number_field :jumps_wingsuit_last_year, class: 'form-control'
-          = f.label '3 мес.', class: 'control-label', :for => :jumps_wingsuit_last_3m
+          = f.label t('activerecord.attributes.user_profile.wingsuit_jumps_last_3m'), class: 'control-label', :for => :jumps_wingsuit_last_3m
           = f.number_field :jumps_wingsuit_last_3m, class: 'form-control'
 
     .form-group
-      = f.label 'Домашняя ДЗ:', class: 'col-sm-2 control-label', :for => :homeDZ_name
+      = f.label t('activerecord.attributes.user_profile.home_DZ'), class: 'col-sm-2 control-label', :for => :homeDZ_name
       .col-sm-4
         = f.text_field :homeDZ_name, class: 'form-control'
 
     .form-group
-      = f.label 'Рост:', class: 'col-sm-2 control-label', :for => :height
+      = f.label t('activerecord.attributes.user_profile.height'), class: 'col-sm-2 control-label', :for => :height
       .col-sm-10
         .form-inline
           = f.number_field :height, class: 'form-control'
-          = f.label 'Вес', class: 'control-label', :for => :weight
+          = f.label t('activerecord.attributes.user_profile.weight'), class: 'control-label', :for => :weight
           = f.number_field :weight, class: 'form-control'
 
     .form-group
-      = f.label 'Размер футболки:', class: 'col-sm-2 control-label', :for => :shirt_size
+      = f.label t('activerecord.attributes.user_profile.shirt_size'), class: 'col-sm-2 control-label', :for => :shirt_size
       .col-sm-1
         = f.text_field :shirt_size, class: 'form-control'
 
     .form-group
       .col-sm-offset-2.col-sm-8
-        = f.submit 'Обновить', class: 'btn btn-primary'
+        = f.submit t('general.update'), class: 'btn btn-primary'
 
   %a.col-sm-offset-2{:data => {:toggle =>'modal', :target => '#CredentialsModal'}}
-    = 'Изменение адреса эл. почты или пароля'
+    = t('users.profile.edit.edit_email_pass')
 
   .modal.fade{:id => 'CredentialsModal', :tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
     .modal-dialog
@@ -91,7 +91,7 @@
                 Close
 
           %h4.modal-title#myModalLabel
-            = 'Изменение регистрационных данных'
+            = t('users.profile.edit.edit_reg_data')
 
         %br
 
@@ -99,7 +99,7 @@
           = devise_error_messages!
 
           .form-group
-            = f.label 'E-mail', class: 'col-sm-4 control-label', :for => :email
+            = f.label t('activerecord.attributes.user.email'), class: 'col-sm-4 control-label', :for => :email
             .col-sm-7
               = f.email_field :email, class: 'form-control'
 
@@ -109,20 +109,20 @@
               = resource.unconfirmed_email
 
           .form-group
-            = f.label 'Пароль', class: 'col-sm-4 control-label', :for => :password
-            .col-sm-7
-              = f.password_field :password, autocomplete: 'off', class: 'form-control', :placeholder => 'Оставьте пустым если не планируете менять пароль'
-
-          .form-group
-            = f.label 'Текущий пароль', class: 'col-sm-4 control-label', :for => :current_password
+            = f.label t('activerecord.attributes.user.current_password'), class: 'col-sm-4 control-label', :for => :current_password
             .col-sm-7
               = f.password_field :current_password, autocomplete: 'off', class: 'form-control', :placeholder => 'Необходимо ввести текущий пароль для подтверждения изменений'
 
           .form-group
-            = f.label 'Подтверждение', class: 'col-sm-4 control-label', :for => :password_confirmation
+            = f.label t('activerecord.attributes.user.password'), class: 'col-sm-4 control-label', :for => :password
+            .col-sm-7
+              = f.password_field :password, autocomplete: 'off', class: 'form-control', :placeholder => 'Оставьте пустым если не планируете менять пароль'
+
+          .form-group
+            = f.label t('activerecord.attributes.user.password_confirmation'), class: 'col-sm-4 control-label', :for => :password_confirmation
             .col-sm-7
               = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control', :placeholder => 'Оставьте пустым если не планируете менять пароль'
 
           .form-group
             .col-sm-offset-4.col-sm-7
-              = f.submit 'Обновить', class: 'btn btn-primary'
+              = f.submit t('general.update'), class: 'btn btn-primary'
