--- a/app/views/tracks/google_earth.html.haml
+++ b/app/views/tracks/google_earth.html.haml
@@ -5,7 +5,7 @@
 
 :javascript
 
-  var map_data = #{@track.get_earth_data};
+  var map_data = #{@track.earth_data};
   var ge;
   google.load("earth", "1", {"other_params":"sensor=false"});
 
