--- a/app/views/tracks/google_maps.html.haml
+++ b/app/views/tracks/google_maps.html.haml
@@ -8,7 +8,7 @@
 
 :javascript
 
-  var map_data = #{@track.get_charts_data};
+  var map_data = #{@track.charts_data};
   var handler;
 
   $(document).ready(function($) {
