--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -41,9 +41,9 @@
         $('#suit').val(suit);
     }
 
-    var wingsuit_id = $.cookie('wingsuit_id);
+    var wingsuit_id = $.cookie('wingsuit_id');
     if (typeof wingsuit_id !== 'undefined' && wingsuit_id.trim()) {
-        $('#wingsuit-id').val(wingsuit);
+        $('#wingsuit-id').val(wingsuit_id);
     }
 
     var location = $.cookie('location');
