--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -14,7 +14,7 @@
           %i.fa.fa-upload
           = t('application.header.upload_track')
       .col-3.hidden-xs.col-sm-3
-        %img.img-responsive{:src => asset_path('app-logo.png')}
+        %img.img-responsive{:src => asset_path('skyderby-logo.png')}
 
 -#.container.top-buffer
 -#  .row
