Добавлен раздел как с этим работать

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -16,25 +16,26 @@
       .col-3.hidden-xs.col-sm-3
         %img.img-responsive{:src => asset_path('skyderby-logo.png')}
 
--#.container.top-buffer
--#  .row
--#    .col-sm-12
--#      %h2= 'Как с этим работать:'
--#  .row.how-it-works
--#    .col-lg-4.col-md-4.col-sm-4
--#      #first-step-hiw
--#      .step-number-hiw= '1'
--#      %p= 'Летайте с GPS логгером'
--#    .col-lg-4.col-md-4.col-sm-4
--#      #second-step-hiw
--#      .step-number-hiw= '2'
--#      %p= 'Загружайте треки'
--#    .col-lg-4.col-md-4.col-sm-4
--#      #third-step-hiw
--#      .step-number-hiw= '3'
--#      %p= 'Анализируйте, летайте лучше'
+.container.top-buffer
+  .row
+    .col-sm-12
+      %h2= 'It is pretty simple:'
+  .row.how-it-works
+    .col-lg-4.col-md-4.col-sm-4
+      #first-step-hiw
+      .step-number-hiw= '1'
+      %p= 'Upload a file'
+    .col-lg-4.col-md-4.col-sm-4
+      #second-step-hiw
+      .step-number-hiw= '2'
+      %p= 'Select free fall range'
+    .col-lg-4.col-md-4.col-sm-4
+      #third-step-hiw
+      .step-number-hiw= '3'
+      %p= 'Analyze'
 
--#%hr
+%hr
+
 .container.top-buffer
   .row
     .col-sm-12
