Добавлены картинки как с этим работать

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -118,25 +118,26 @@
   -webkit-background-origin: padding-box;
   -webkit-background-size: 66% 3px;
 
-  background: asset-url('line.png') no-repeat center 227px;
+  background: asset-url('line.png') no-repeat center 156px;
   background-size: 66% 3px;
 
   text-align: center;
 }
 
 #first-step-hiw {
-  background: asset-url('app-logo.png') no-repeat center 10px;
-  height: 200px;
+  background: asset-url('hiw-step-1.png') no-repeat center 10px;
+  height: 130px;
+
 }
 
 #second-step-hiw {
-  background: asset-url('app-logo.png') no-repeat center 10px;
-  height: 200px;
+  background: asset-url('hiw-step-2.png') no-repeat center 10px;
+  height: 130px;
 }
 
 #third-step-hiw {
-  background: asset-url('app-logo.png') no-repeat center 10px;
-  height: 200px;
+  background: asset-url('hiw-step-3.png') no-repeat center 10px;
+  height: 130px;
 }
 
 .step-number-hiw {
